<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="title_activity_activity_2">GarbageParamethers</string>
    <string name="plus">+</string>
    <string name="garbage1">Пластик</string>
    <string name="garbage2">Металл</string>
    <string name="garbage3">Стекло</string>
    <string name="garbage4">Смешанный мусор</string>
    <string name="garbage5">Батарейки</string>
    <string name="minus">-</string>

    <string name="app_name">MapsEx</string>
    <string name="title_activity_maps">Map</string>
    <string name="button1">Button1</string>
    <string name="title_activity_teams">TeamsActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_registration">Registration</string>

    <string name="title_activity_certain_team">CertainTeamActivity</string>
    <string name="title_activity_games">GamesActivity</string>
    <string name="title_activity_new_team">New Team Activity</string>
    <string name="title_activity_rating">RatingActivity</string>
    <string name="title_activity_password">PasswordActivity</string>
    <string name="title_activity_cleangames">CleanGamesActivity</string>

    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="btn_register">REGISTER</string>
    <string name="btn_link_to_register">Not a member? Sign up now.</string>
    <string name="btn_link_to_login">Already registred! Login Me.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Fullname</string>

</resources>
