<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical"
        android:focusable="true"
        android:weightSum="1">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="41dp"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Команда: "
            android:id="@+id/command_name"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="Счёт: "
            android:id="@+id/command_score"
            android:layout_marginLeft="30dp"
            android:layout_marginTop="20dp" />


        <TextView
            android:layout_width="94dp"
            android:layout_height="wrap_content"
            android:text="@string/garbage1"
            android:id="@+id/textView1"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="68dp">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button"
                android:layout_weight="0.04"
                android:layout_gravity="left" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/garbage1"
                android:ems="12"
                android:layout_gravity="center_horizontal"
                android:text="0"
                android:textAlignment="center" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button2"
                android:layout_weight="0.04"
                android:layout_gravity="right" />
        </LinearLayout>


        <TextView
            android:layout_width="65dp"
            android:layout_height="wrap_content"
            android:text="@string/garbage2"
            android:id="@+id/textView2"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center"
            android:autoText="false" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button3"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/garbage2"
                android:ems="12"
                android:text="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button4"
                android:layout_weight="0.05" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garbage3"
            android:id="@+id/textView3"
            android:layout_gravity="center_horizontal" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal">

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button5"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/garbage3"
                android:ems="12"
                android:text="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button6"
                android:layout_weight="0.05" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garbage4"
            android:id="@+id/textView"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button7"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/garbage4"
                android:ems="12"
                android:text="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button8"
                android:layout_weight="0.05" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/garbage5"
            android:id="@+id/textView4"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button9"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/garbage5"
                android:ems="12"
                android:text="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button10"
                android:layout_weight="0.05" />
        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Admin"
            android:id="@+id/textView5"
            android:layout_gravity="center_horizontal"
            android:textAlignment="center" />

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/minus"
                android:id="@+id/button11"
                android:layout_weight="0.05" />

            <EditText
                android:layout_width="118dp"
                android:layout_height="wrap_content"
                android:inputType="number"
                android:id="@+id/editText2"
                android:ems="12"
                android:text="0" />

            <Button
                style="?android:attr/buttonStyleSmall"
                android:layout_width="wrap_content"
                android:layout_height="71dp"
                android:text="@string/plus"
                android:id="@+id/button13"
                android:layout_weight="0.05" />
        </LinearLayout>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal" >



        <Button
            android:id="@+id/button_submit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="Save"
            android:textSize="30sp" />
        </LinearLayout>
    </LinearLayout>>
</ScrollView>